adding tool to download and conver the MSCOCO 2017 dataset to YOLO format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 # YOLO converters -- helper apps to convert annotations to YOLO format.
-# Copyright 2021-2022 Stephane Charette <stephanecharette@gmail.com>
+# Copyright 2021-2024 Stephane Charette <stephanecharette@gmail.com>
 # MIT license applies.  See "license.txt" for details.
 
-CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
+CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
 
 PROJECT (YoloConverters C CXX)
 
@@ -19,3 +19,4 @@ INCLUDE_DIRECTORIES (${OpenCV_INCLUDE_DIRS})
 
 ADD_SUBDIRECTORY (kaggle)
 ADD_SUBDIRECTORY (visdrone)
+ADD_SUBDIRECTORY (mscoco)
